--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html, body {
 #content a {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 		text-decoration: none;
-    color: black;
+    color: white;
     font-size: 20px;
 
 }
