--- a/style.css
+++ b/style.css
@@ -7,30 +7,8 @@ html, body {
 
 #content {
     position: absolute;
-    left: 20px;
+    left: 8%;
     z-index: 2;
-    padding: 15px;
-    line-height: 1.5em;
-    color: black;
-    font-family: sans-serif;
-    font-size: 13px;
-    width: 390px;
+    padding: 50px 0;
 }
-
-#content h1 {
-    line-height: 1.3em;
-   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-}
-
-#content a {
-   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-		text-decoration: none;
-    color: white;
-    font-size: 20px;
-
-}
-
-.lien {
-	padding-bottom: 4px;
-}	
 	
